--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-client_ID = 
-client_SECRET = 
-redirect_url = http://localhost:9000
+CLIENT_ID = 
+CLIENT_SECRET = 
+REDIRECT_URI = http://localhost:9000
